bulma additon added Bulma for CSS

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "react": "18.0.0",
+    "react-bootstrap": "2.4.0",
     "react-dom": "18.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0"
